# foldable1.hs

./: README.md  foldable1.cabal
Data/: Foldable1.hs
bench/: Bench.hs
