cabal-version:       2.2
name:                foldable1
version:             0.1.0.0
synopsis:            Foldable types with at least 1 element
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
copyright:           2018 M Farkas-Dyck
-- category:            
build-type:          Simple
extra-source-files:  README.md

common c
  build-depends:       base >= 4.7 && < 5
                     , transformers >= 0.3 && < 0.6
                     , util
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , EmptyCase
                     , InstanceSigs
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , GeneralizedNewtypeDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods

library
  import:              c
  exposed-modules:     Data.Foldable1

benchmark bench
  import:           c
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall
  hs-source-dirs:   bench
  main-is:          Bench.hs

  build-depends:
      containers
    , foldable1

  build-depends:
      criterion  >=1.5.6.1 && <1.6
    , deepseq    >=1.3     && <1.5

source-repository head
  type:     git
  location: https://github.com/strake/foldable1.hs
